--- a/ecommerce/src/app/app.component.html
+++ b/ecommerce/src/app/app.component.html
@@ -12,22 +12,22 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center">
 
           <li class="nav-item ">
-            <a class="nav-link fw-semibold text-uppercase me-1 text-danger" href="Home">
+            <a class="nav-link fw-semibold text-uppercase me-1 text-danger" routerLink="/Home">
               home
             </a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link  fw-semibold text-uppercase textBlur  me-1" href="Products" >
+            <a class="nav-link  fw-semibold text-uppercase textBlur  me-1">
               Products
             </a>
           </li>
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link  fw-semibold text-uppercase textBlur  me-1" href="#">
               About
             </a>
-          </li>
+          </li> -->
           
           <li class="nav-item">
             <a class="nav-link" href="#">
@@ -36,8 +36,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="/Cart">
               <i class="fa fa-shopping-basket fa-shake fs-5"></i>
+                <div style="font-size: 10px; color: #fff;" class="barge bg-danger">{{totalItem}}</div>
             </a>
           </li>
 
