--- a/ecommerce/src/app/pages/cart/cart.component.html
+++ b/ecommerce/src/app/pages/cart/cart.component.html
@@ -1,1 +1,57 @@
-<p>cart works!</p>
+<ng-container *ngIf="products.length !=0">
+    <div class="container">
+        <div class="card-table">
+            <div class="cart-product">
+                <table class="table table-reponsive">
+                    <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>Product ID</th>
+                            <th>Product Name</th>
+                            <th>Product Image</th>
+                            <th>Price</th>
+                            <th>Total</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of products; let i = index">
+                            <td>{{i+1}}</td>
+                            <td style="width: 15%;">{{item.id}}</td>
+                            <td style="width: 25%; text-align: center;">{{item.name}}</td>
+                            <td style="width: 20%;"><img style="width: 150px;" src="{{item.image}}"></td>
+                            <td style="width: 25%; text-align: center;">{{item.origPrice}}</td>
+                            <td style="width: 25%; text-align: center;">{{item.origPrice}}</td>
+                            <td>
+                                <button (click)="removeItem(item)" class="btn btn-danger"><i class="fa-solid fa-trash"></i>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr class="function">
+                            <td colspan="4"></td>
+                            <td><button (click)="emptyCart()" style="border-radius: 0; font-size: 15px; border: none;" class="btn btn-danger">Empty cart</button></td>
+                            <td><button style="border-radius: 0; font-size: 15px; border: none;" routerLink="/Home" class="btn btn-primary">Shop More</button></td>
+                            <td><button style="border-radius: 0; font-size: 15px; border: none;" class="btn btn-success">Checkout</button></td>
+                            <td style="width: 25%; text-align: center;"><strong>Grand Total: ₱{{grandTotal}}</strong></td>
+                        </tr>
+                    </tbody>
+                </table>
+                
+            </div>
+        </div>
+    </div>
+</ng-container>
+
+<ng-container *ngIf="products.length ==0">
+    <div class="container">
+        <div class="card">
+            <h5 class="card-title">My Cart</h5>
+        </div>
+        <div class="center">
+            <img src="https://respectingchoices.dcopy.net/content/images/empty-cart.png" alt="">
+            <h4>Your cart is empty</h4>
+            <h6>Add items to it now</h6>
+            <button routerLink="/Home" class="btn btn-primary">Shop now</button>
+        </div>
+    </div>
+</ng-container>
