--- a/ecommerce/src/app/pages/home/home.component.html
+++ b/ecommerce/src/app/pages/home/home.component.html
@@ -17,6 +17,15 @@
           <div class="carousel-item">
             <img src="assets/carousel/3.jpg" class="d-block w-100" alt="...">
           </div>
+          <div class="carousel-item">
+            <img src="assets/carousel/6.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/carousel/7.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/carousel/8.png" class="d-block w-100" alt="...">
+          </div>
         </div>
     </div>
       
