--- a/ecommerce/src/app/products/products.component.html
+++ b/ecommerce/src/app/products/products.component.html
@@ -37,7 +37,7 @@
                                     <span><i class="fa fa-star m-0" style="color: #f1f50f; "></i></span>                                                 
                                 </div>
 								<div class="col-6 text-end">
-                                            <button class="btn btn-success">Add to Cart </button>
+                                            <button class="btn btn-success" (click)=addtoCart(product)>Add to Cart </button>
                                  </div>
                             </div>
                         </div>
