--- a/ecommerce/src/app/pages/header/header.component.html
+++ b/ecommerce/src/app/pages/header/header.component.html
@@ -44,6 +44,6 @@
 
         </ul>
     </div>
-    <i class="fa-solid fa-right-from-bracket fa-lg" style="color: #6c6f75; padding: 10px;" ></i>
+    <i class="fa-solid fa-right-from-bracket fa-lg" routerLink="/Log" style="color: #6c6f75; padding: 10px;" ></i>
   </div>
 </nav>
