--- a/ecommerce/src/app/pages/home/home.component.html
+++ b/ecommerce/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="carouselExampleDark" class="carousel carousel-dark slide">
 
     <div class="carousel-indicators">
