--- a/ecommerce/src/app/pages/header/header.component.html
+++ b/ecommerce/src/app/pages/header/header.component.html
@@ -18,7 +18,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link  fw-semibold text-uppercase textBlur  me-1">
+            <a class="nav-link  fw-semibold text-uppercase textBlur me-1" routerLink="/Product">
               Products
             </a>
           </li>
