--- a/ecommerce/src/app/pages/error/error.component.html
+++ b/ecommerce/src/app/pages/error/error.component.html
@@ -338,6 +338,10 @@
     <h2 class="error-subtitle">
      Have you tried turning it off and on again?
     </h2>
+
+    <div class="center">
+      <button routerLink="/Home" class="btn btn-primary">Back</button>
+  </div>
   
    
   </div>
