--- a/ecommerce/src/app/login/login.component.html
+++ b/ecommerce/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <body>
-    <div class="wrapper" style="background-image: url('assets/Login/reg.jpg')">
+    <div class="wrapper" style="background-image: url('assets/Login/a.jpg')">
       <div class="inner">
         <div class="image-holder">
-          <img src="assets/Login/reg1.jpg" alt="" />
+          <img src="assets/Login/a1.jpg" alt="" />
         </div>
         <form #myLogin="ngForm" (ngSubmit)="doLogin(myLogin.value)">
           <h3>Login Form</h3>
